--- a/choir/templates/404.html
+++ b/choir/templates/404.html
@@ -1,4 +1,4 @@
-{% extends "admin/base_site.html" %}
+{% extends 'base_index.html' %}
 {% load i18n %}
 {% load crispy_forms_tags %}
 {% block title %}{% translate 'Page not found' %}{% endblock %}
