--- a/choir/templates/admin/500.html
+++ b/choir/templates/admin/500.html
@@ -1,30 +1,17 @@
-{% extends 'base_index.html' %}
+{% extends "admin/base_site.html" %}
 {% load i18n %}
-{% load crispy_forms_tags %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+<a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
+&rsaquo; {% translate 'Server error' %}
+</div>
+{% endblock %}
 
 {% block title %}{% translate 'Server error (500)' %}{% endblock %}
 
 {% block content %}
-<main id="main" class="main">
-    {% block breadcrumbs %}
-        <div class="pagetitle">
-            <h1>Dashboard</h1>
-            <nav>
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{% url 'admin:index' %}">Dashboard</a></li>
-                <li class="breadcrumb-item active">{% translate 'Server error' %}</li>
-              </ol>
-            </nav>
-        </div>
-    {% endblock %}
-    <section id="five" class="appointment section-bg">
-          <div class="container" >
-              <div class="section-title " style="margin-top:80px;">
-                  <h2>{% translate 'Server Error <em>(500)</em>' %}</h2>
-                    <p>{% translate 'There’s been an error. It’s been reported to the site administrators via email and should be fixed shortly. Thanks for your patience.' %}</p>
+<h1>{% translate 'Server Error <em>(500)</em>' %}</h1>
+<p>{% translate 'There’s been an error. It’s been reported to the site administrators via email and should be fixed shortly. Thanks for your patience.' %}</p>
 
-                </div>
-          </div>
-    </section>
-</main>
 {% endblock %}
