--- a/choir/templates/authentication/profile.html
+++ b/choir/templates/authentication/profile.html
@@ -69,7 +69,7 @@
                                     <!-- Form Group (organization name)-->
                                     <div class="col-md-6">
                                         <label class="small mb-1" for="inputcampusName">Campus</label>
-                                        <input disabled  class="form-control" id="inputcampusName" type="text" placeholder="Enter your organization name" value="{{profile.campus}}" readonly>
+                                        <input disabled  class="form-control" id="inputcampusName" type="text" placeholder="Enter your campus" value="{{profile.campus}}" readonly>
                                     </div>
                                     <!-- Form Group (location)-->
                                     <div class="col-md-6">
@@ -82,7 +82,7 @@
                                     <!-- Form Group (organization name)-->
                                     <div class="col-md-6">
                                         <label class="small mb-1" for="inputpartName">Part</label>
-                                        <input disabled  class="form-control" id="inputpartName" type="text" placeholder="Enter your organization name" value="{{profile.part}}" readonly>
+                                        <input disabled  class="form-control" id="inputpartName" type="text" placeholder="Enter your part" value="{{profile.part}}" readonly>
                                     </div>
                                     <!-- Form Group (birthday)-->
                                     <div class="col-md-6">
@@ -118,8 +118,17 @@
                                     </div>
                                 </div>
                                 <!-- Save changes button-->
-                                <a href="{% url 'editprofile' user.username %}" class="btn btn-primary" type="button">Edit Profile</a>
-                                <a href="{% url 'reset_password' %}" class="btn btn-primary" type="button">Reset Password</a>
+                                <div class="row gx-3 mb-3">
+                                    <!-- Form Group (phone number)-->
+                                    <div class="col-md-6 mb-2">
+                                        <a href="{% url 'editprofile' user.username %}" class="btn btn-primary" type="button">Edit Profile</a>
+                                    </div>
+
+                                    <!-- Form Group (joinday)-->
+                                    <div class="col-md-6">
+                                        <a href="{% url 'reset_password' %}" class="btn btn-primary" type="button">Reset Password</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
